crates/syntax/tests/snapshots/parser__parser_block assignment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..23,
        statements: StatementList {
            span: 0..23,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                Assignment(
                    Assignment {
                        span: 0..22,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        doc: None,
                        attributes: [],
                        visibility: None,
                        qualifier: None,
                        name: Identifier {
                            span: 0..1,
                            name: "a",
                        },
                        ty: None,
                        value: Block(
                            StatementList {
                                span: 5..21,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                statements: [
                                    Assignment(
                                        Assignment {
                                            span: 5..14,
                                            extras: ItemExtras {
                                                leading: [],
                                                trailing: [],
                                            },
                                            doc: None,
                                            attributes: [],
                                            visibility: None,
                                            qualifier: None,
                                            name: Identifier {
                                                span: 5..6,
                                                name: "a",
                                            },
                                            ty: None,
                                            value: BinaryOperation(
                                                BinaryOperation {
                                                    span: 9..14,
                                                    lhs: Literal(
                                                        Literal {
                                                            span: 9..10,
                                                            extras: ItemExtras {
                                                                leading: [],
                                                                trailing: [],
                                                            },
                                                            literal: Integer(
                                                                IntegerLiteral {
                                                                    span: 9..10,
                                                                    value: 1,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                    operation: Add,
                                                    rhs: Literal(
                                                        Literal {
                                                            span: 13..14,
                                                            extras: ItemExtras {
                                                                leading: [],
                                                                trailing: [],
                                                            },
                                                            literal: Integer(
                                                                IntegerLiteral {
                                                                    span: 13..14,
                                                                    value: 2,
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                ],
                                tail: Some(
                                    ExpressionStatement {
                                        span: 16..21,
                                        extras: ItemExtras {
                                            leading: [],
                                            trailing: [],
                                        },
                                        attributes: [],
                                        expression: BinaryOperation(
                                            BinaryOperation {
                                                span: 16..21,
                                                lhs: QualifiedName(
                                                    QualifiedName {
                                                        span: 16..17,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [],
                                                        },
                                                        parts: [
                                                            Identifier {
                                                                span: 16..17,
                                                                name: "a",
                                                            },
                                                        ],
                                                    },
                                                ),
                                                operation: Multiply,
                                                rhs: Literal(
                                                    Literal {
                                                        span: 20..21,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [],
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 20..21,
                                                                value: 3,
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
            tail: None,
        },
    },
)
