crates/syntax/tests/snapshots/parser__parser_call empty args comment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..17,
        statements: StatementList {
            span: 0..17,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..17,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        expression: Call(
                            Call {
                                span: 0..17,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                name: QualifiedName {
                                    span: 0..3,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    parts: [
                                        Identifier {
                                            span: 0..3,
                                            name: "foo",
                                        },
                                    ],
                                },
                                arguments: ArgumentList {
                                    span: 4..16,
                                    extras: ItemExtras {
                                        leading: [
                                            Comment(
                                                Comment {
                                                    span: 4..16,
                                                    inner: MultiLine(
                                                        "foobar",
                                                    ),
                                                },
                                            ),
                                        ],
                                        trailing: [],
                                    },
                                    arguments: [],
                                },
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
