crates/syntax/tests/snapshots/parser__parser_call partially named args.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..16,
        statements: StatementList {
            span: 0..16,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..16,
                    extras: ItemExtras {
                        leading: [],
                        trailing: [],
                    },
                    attributes: [],
                    expression: Call(
                        Call {
                            span: 0..16,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            name: QualifiedName {
                                span: 0..3,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                parts: [
                                    Identifier {
                                        span: 0..3,
                                        name: "foo",
                                    },
                                ],
                            },
                            arguments: ArgumentList {
                                span: 4..15,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                arguments: [
                                    Unnamed(
                                        UnnamedArgument {
                                            span: 4..5,
                                            extras: ItemExtras {
                                                leading: [],
                                                trailing: [],
                                            },
                                            value: QualifiedName(
                                                QualifiedName {
                                                    span: 4..5,
                                                    extras: ItemExtras {
                                                        leading: [],
                                                        trailing: [],
                                                    },
                                                    parts: [
                                                        Identifier {
                                                            span: 4..5,
                                                            name: "a",
                                                        },
                                                    ],
                                                },
                                            ),
                                        },
                                    ),
                                    Named(
                                        NamedArgument {
                                            span: 7..12,
                                            extras: ItemExtras {
                                                leading: [],
                                                trailing: [],
                                            },
                                            name: Identifier {
                                                span: 7..8,
                                                name: "b",
                                            },
                                            value: Literal(
                                                Literal {
                                                    span: 11..12,
                                                    extras: ItemExtras {
                                                        leading: [],
                                                        trailing: [],
                                                    },
                                                    literal: Integer(
                                                        IntegerLiteral {
                                                            span: 11..12,
                                                            value: 2,
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                    Unnamed(
                                        UnnamedArgument {
                                            span: 14..15,
                                            extras: ItemExtras {
                                                leading: [],
                                                trailing: [],
                                            },
                                            value: Literal(
                                                Literal {
                                                    span: 14..15,
                                                    extras: ItemExtras {
                                                        leading: [],
                                                        trailing: [],
                                                    },
                                                    literal: Integer(
                                                        IntegerLiteral {
                                                            span: 14..15,
                                                            value: 3,
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            },
                        },
                    ),
                },
            ),
        },
    },
)
